# DiscoCH

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: empirical_discoloration_model_pipeline_2025_6_2.pkl
notebooks/: DiscoCH_Demo.ipynb
scripts/: stac_dirigent.py
src/disco_ch/: apply_model_stac.py  stac_pull.py  user_defined_params.py
